--- a/core/Makefile
+++ b/core/Makefile
@@ -2741,7 +2741,13 @@ ifneq (,$(filter address, $(SANITIZE_TARGET)))
   endif
 endif
 
-FULL_SYSTEMIMAGE_DEPS += $(INTERNAL_ROOT_FILES) $(INSTALLED_FILES_FILE_ROOT)
+systemimage-changelog: $(INTERNAL_SYSTEMIMAGE_FILES)
+	@echo -e "Making changelog!"
+	$(hide) APKCERTS=$(APKCERTS_FILE) ./vendor/aicp/tools/changelog
+
+.PHONY: systemimage-changelog
+
+FULL_SYSTEMIMAGE_DEPS += $(INTERNAL_ROOT_FILES) $(INSTALLED_FILES_FILE_ROOT) systemimage-changelog
 
 # -----------------------------------------------------------------
 ifdef BUILDING_SYSTEM_IMAGE
