build: Cleanup changelog invocation
* Changelog does not depend on anything.
* Don't use -e in echo, it is not used.
* Don't set APKCERTS, it is not used.

Change-Id: Ic4cacf8543e2fc24070e1f8983226de59f183ac6

--- a/core/Makefile
+++ b/core/Makefile
@@ -2742,9 +2742,9 @@ ifneq (,$(filter address, $(SANITIZE_TARGET)))
 endif
 
 .PHONY: systemimage-changelog
-systemimage-changelog: $(INTERNAL_SYSTEMIMAGE_FILES)
-	@echo -e "Making changelog!"
-	$(hide) APKCERTS=$(APKCERTS_FILE) ./vendor/aicp/tools/changelog
+systemimage-changelog:
+	@echo "Making changelog!"
+	./vendor/aicp/tools/changelog
 
 CHANGELOG := systemimage-changelog
 
