build: adapt Changelog handling in Makefile [1/2]
due the fact google is resetting all env variables, we handle
skipping the Changelog by setting USER_BUILD_NO_CHANGELOG=1 in Makefile.
Also of this, we can't read env. variable $OUT in script direclty
anymore, so we add this as an argument to the script.

Change-Id: I8fb39b1dffd990e13a12aa90ac187a881a7dcab6

--- a/core/Makefile
+++ b/core/Makefile
@@ -2742,10 +2742,12 @@ ifneq (,$(filter address, $(SANITIZE_TARGET)))
 endif
 
 .PHONY: systemimage-changelog
+ifneq (1,$(USER_BUILD_NO_CHANGELOG))
 systemimage-changelog:
 	@echo "Making changelog!"
-	./vendor/aicp/tools/changelog
+	./vendor/aicp/tools/changelog $(PRODUCT_OUT)
 
+endif
 CHANGELOG := systemimage-changelog
 
 FULL_SYSTEMIMAGE_DEPS := $(INTERNAL_SYSTEMIMAGE_FILES) $(INTERNAL_USERIMAGES_DEPS)
